--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -99,6 +99,7 @@
                   <a class="nav-link" href="/about" data-bs-dismiss="offcanvas"><i class="bi bi-info-circle" title="about"></i> About</a>
                 </li>
                 <li class="nav-item">
+                  <!-- NOTE: data-bs-dismiss="offcanvas" seems to break this nav option -->
                   <a class="nav-link" href="https://codeberg.org/vnpower/pixivfe"><i class="bi bi-globe" title="globe"></i> Source code</a>
                 </li>
               </div>
