--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -23,6 +23,7 @@
 
   <script src="/js/illust-preview.js" defer></script>
   <script src="/js/horizontal-scroll.js" defer></script>
+  <script src="/js/comment-pagination.js" defer></script>
 
   <meta content="summary_large_image" name="twitter:card" />
 
