navbar user testing

--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -54,7 +54,7 @@
     <div class="container-fluid justify-content-between">
         <div class="d-flex align-items-center">
           <!-- Offcanvas menu for navigation items -->
-          <button class="navbar-toggler me-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler border-0 me-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -122,6 +122,11 @@
             </button>
           </form>
         </div>
+        <!-- TODO: figure out how to have the logged in user's avatar and name in the navbar -->
+        <!-- <a class="h5 text-decoration-none mb-0 d-flex align-items-center" href="/">
+          <img src=" .User.Avatar " width="30" height="30" class="d-inline-block rounded-circle me-2">
+          <p class="m-0"> .User.Name </p>
+        </a> -->
     </div>
   </nav>
   <script src="/js/on-page-load.js"></script>
