disable loading horizontal scroll js

--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -22,7 +22,8 @@
     integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"></script>
 
   <script src="/js/illust-preview.js" defer></script>
-  <script src="/js/horizontal-scroll.js" defer></script>
+  <!-- TODO: can be annoying when you accidentally scroll inside a horizontal scroll area instead of the main content -->
+  <!-- <script src="/js/horizontal-scroll.js" defer></script> -->
   <script src="/js/comment-pagination.js" defer></script>
 
   <meta content="summary_large_image" name="twitter:card" />
