--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -17,9 +17,10 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-  <meta name="htmx-config" content='{"includeIndicatorStyles":false}'>
+  <!-- TODO: get htmx working properly again; currently causes comment pagination to be persisted across page navigations -->
+  <!-- <meta name="htmx-config" content='{"includeIndicatorStyles":false}'>
   <script src="/js/htmx@1.9.10.min.js"
-    integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"></script>
+    integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"></script> -->
 
   <script src="/js/illust-preview.js" defer></script>
   <!-- TODO: can be annoying when you accidentally scroll inside a horizontal scroll area instead of the main content -->
