--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -98,9 +98,9 @@
 <!-- col-12 to display Related works at full width -->
 <div class="col-12">
   <!-- h2 class="h4 fw-bold mb-0" used to replicate Pixiv headings -->
-  <h2 class="h4 fw-bold mb-0">Related works</h2>
+  <h2 class="h4 fw-bold mb-4">Related works</h2>
   <!-- Gradually increase the number of artworks shown per row along with device width -->
-  <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4 mt-1">
+  <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
     {{- include "fragments/small-tn" .Illust.RelatedWorks }}
   </div>
 </div>
