--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -94,13 +94,13 @@
 
       <!-- Tag information -->
       <!-- text-start ensures that the content within non-emphasized tags is left-aligned while still maintaining proper wrapping behavior -->
-      <div class="d-flex flex-wrap mb-2">
+      <div class="d-flex flex-wrap align-items-center mb-2">
         {{- if .AiType == 2 }}
         <span class="badge bg-warning text-dark me-2 mb-2">AI-generated</span>
         {{- end }}
         {{- range .Tags }}
           {{- if isEmphasize(.Name) }}
-          <span class="badge bg-primary me-2 mb-2">{{ .Name }}</span>
+          <span class="badge bg-danger me-2 mb-2">{{ .Name }}</span>
           {{- else }}
           <span class="badge fw-normal text-muted me-2 mb-2 p-0 text-wrap text-break text-start">
             <a href="/tags/{{ escapeString(.Name) }}" class="text-decoration-none text-wrap text-break">#{{ .Name }}</a>
