--- a/assets/views/fragments/thumbnail-dt.jet.html
+++ b/assets/views/fragments/thumbnail-dt.jet.html
@@ -3,24 +3,31 @@
 {{- hideR18G := CookieList["pixivfe-HideArtR18G"] }}
 {{- hideAi := CookieList["pixivfe-HideArtAI"] }}
 <div class="position-relative h-100">
+  <!-- Placing the anchor element out here so that the div that contains the tags acts as a hyperlink -->
+  <a target="{{ target }}" href="/artworks/{{ .ID }}" class="d-block h-100">
   <div class="position-absolute top-0 start-0 p-2 d-flex justify-content-between w-100">
+    <!-- When an artwork is listed on the ranking page -->
     {{- if isset(.Rank) }}
     <span class="badge bg-primary rounded-pill">{{ .Rank }}</span>
     {{- end }}
+    <!-- When an artwork is tagged as R-18 or R-18G -->
     {{- if .XRestrict != 0 }}
     <span class="badge bg-danger">{{ if .XRestrict == 1 }}R-18{{ else }}R-18G{{ end }}</span>
     {{- end }}
+    <!-- When an artwork has multiple images -->
     {{- if .Pages > 1 }}
     <span class="badge bg-secondary">&boxbox; {{ .Pages }}</span>
     {{- end }}
+    <!-- When an artwork is a ugoira -->
     {{- if .IllustType == 2 }}
     <span class="badge bg-info">&#9654;</span>
     {{- end }}
   </div>
   {{- AiType := isset(.AiType) ? .AiType : 0}}
-  <a target="{{ target }}" href="/artworks/{{ .ID }}" class="d-block h-100">
     {{- if (.XRestrict > 0 && hideR18 != "" && hideR18G != "") || (.XRestrict == 2 && hideR18G != "") }}
+    <!-- When the user has enabled hideR18 or hideR18G, display a plain thumbnail instead -->
     <img src="/img/nsfw.png" alt="{{ .Title }}" class="img-fluid h-100 object-fit-cover" loading="lazy" />
+    <!-- When the user has enabled hideAi, display a plain thumbnail instead -->
     {{- else if AiType == 2 && hideAi }}
     <img src="/img/ai.png" alt="{{ .Title }}" class="img-fluid h-100 object-fit-cover" loading="lazy" />
     {{- else }}
