rework ugoira indicator in thumbnail

--- a/assets/views/fragments/thumbnail-dt.jet.html
+++ b/assets/views/fragments/thumbnail-dt.jet.html
@@ -18,10 +18,6 @@
     {{- if .Pages > 1 }}
     <span class="badge bg-secondary">&boxbox; {{ .Pages }}</span>
     {{- end }}
-    <!-- When an artwork is a ugoira -->
-    {{- if .IllustType == 2 }}
-    <span class="badge bg-info">&#9654;</span>
-    {{- end }}
   </div>
   {{- AiType := isset(.AiType) ? .AiType : 0}}
     {{- if (.XRestrict > 0 && hideR18 != "" && hideR18G != "") || (.XRestrict == 2 && hideR18G != "") }}
@@ -32,6 +28,15 @@
     <img src="/img/ai.png" alt="{{ .Title }}" class="img-fluid h-100 object-fit-cover" loading="lazy" />
     {{- else }}
     <img src="{{ .Thumbnail }}" alt="{{ .Title }}" class="img-fluid h-100 object-fit-cover rounded" loading="lazy" />
+    {{- end }}
+    <!-- When an artwork is a ugoira -->
+    <!-- Creates a centered, circular overlay (60x60px) with semi-transparent black background.
+         The play icon is centered within this overlay and appears on top of the thumbnail. -->
+    <!-- TODO: remove the inline styling here -->
+    {{- if .IllustType == 2 }}
+    <div class="position-absolute top-50 start-50 translate-middle d-flex justify-content-center align-items-center bg-dark bg-opacity-50 rounded-circle" style="width: 60px; height: 60px; z-index: 1;">
+      <i class="bi bi-play-fill text-white fs-1"></i>
+    </div>
     {{- end }}
   </a>
 </div>
