--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -20,10 +20,9 @@
     </div>
     <div class="card-body">
       <div class="overflow-auto" id="horizontal-scroll">
-        <div class="d-flex flex-nowrap">
+        <div class="row flex-nowrap">
           {{- range .Illust.RecentWorks }}
-          <!-- TODO: style="min-width: 200px;" is a dirty hack to get it working -->
-          <div class="me-3 w-100" style="min-width: 200px;">
+          <div class="col-2 px-2">
             {{- include "fragments/thumbnail-dt" . }}
           </div>
           {{- end }}
