use bootstrap icon for pages icon

--- a/assets/views/fragments/thumbnail-dt.jet.html
+++ b/assets/views/fragments/thumbnail-dt.jet.html
@@ -23,7 +23,7 @@
     <div class="d-flex flex-column align-items-end">
       <!-- When an artwork has multiple images -->
       {{- if .Pages > 1 }}
-      <span class="badge bg-secondary">&boxbox; {{ .Pages }}</span>
+      <span class="badge bg-secondary"><i class="bi bi-image"></i> {{ .Pages }}</span>
       {{- end }}
     </div>
   </div>
