--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -124,10 +124,16 @@
             <i class="bi bi-hand-thumbs-up me-1"></i>
             <span>{{- .Likes }}</span>
         </div>
-        <div class="mb-2">
+        <div class="me-4 mb-2">
             <i class="bi bi-calendar me-1"></i>
             <span>{{- parseTime: .Date }}</span>
         </div>
+        {{- if .Images[0].Width != 0 && .Images[0].Height != 0 }}
+        <div class="mb-2">
+            <i class="bi bi-arrows-angle-expand me-1"></i>
+            <span>{{ .Images[0].Width }}x{{ .Images[0].Height }}</span>
+        </div>
+        {{- end }}
       </div>
     </div>
   </div>
