rm offcanvas dismiss

--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -69,40 +69,40 @@
               <div class="mb-4">
                   <h3 class="h5">Explore</h3>
                 <li class="nav-item">
-                  <a class="nav-link" href="/discovery" data-bs-dismiss="offcanvas"><i class="bi bi-compass" title="compass"></i> Discovery</a>
+                  <a class="nav-link" href="/discovery"><i class="bi bi-compass" title="compass"></i> Discovery</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/ranking" data-bs-dismiss="offcanvas"><i class="bi bi-trophy" title="crown"></i> Ranking</a>
+                  <a class="nav-link" href="/ranking"><i class="bi bi-trophy" title="crown"></i> Ranking</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/rankingCalendar" data-bs-dismiss="offcanvas"><i class="bi bi-calendar" title="calendar"></i> Ranking history</a>
+                  <a class="nav-link" href="/rankingCalendar"><i class="bi bi-calendar" title="calendar"></i> Ranking history</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/newest" data-bs-dismiss="offcanvas"><i class="bi bi-stars" title="sparkling"></i> Newest</a>
+                  <a class="nav-link" href="/newest"><i class="bi bi-stars" title="sparkling"></i> Newest</a>
                 </li>
               </div>
               <div class="mb-4">
               <h3 class="h5">Your profile</h3>
                 <li class="nav-item">
-                  <a class="nav-link" href="/self/followingWorks" data-bs-dismiss="offcanvas"><i class="bi bi-people" title="users"></i> Latest works by followed</a>
+                  <a class="nav-link" href="/self/followingWorks"><i class="bi bi-people" title="users"></i> Latest works by followed</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/self/bookmarks" data-bs-dismiss="offcanvas"><i class="bi bi-heart" title="heart"></i> Your bookmarks</a>
+                  <a class="nav-link" href="/self/bookmarks"><i class="bi bi-heart" title="heart"></i> Your bookmarks</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/self" data-bs-dismiss="offcanvas"><i class="bi bi-person" title="user"></i> Your profile</a>
+                  <a class="nav-link" href="/self"><i class="bi bi-person" title="user"></i> Your profile</a>
                 </li>
               </div>
               <div class="mb-4">
               <h3 class="h5">Settings & info</h3>
                 <li class="nav-item">
-                  <a class="nav-link" href="/settings" data-bs-dismiss="offcanvas"><i class="bi bi-gear" title="settings"></i> Settings</a>
+                  <a class="nav-link" href="/settings"><i class="bi bi-gear" title="settings"></i> Settings</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/about" data-bs-dismiss="offcanvas"><i class="bi bi-info-circle" title="about"></i> About</a>
+                  <a class="nav-link" href="/about"><i class="bi bi-info-circle" title="about"></i> About</a>
                 </li>
                 <li class="nav-item">
-                  <!-- NOTE: data-bs-dismiss="offcanvas" seems to break this nav option -->
+                  <!-- NOTE: seems to break this nav option -->
                   <a class="nav-link" href="https://codeberg.org/vnpower/pixivfe"><i class="bi bi-globe" title="globe"></i> Source code</a>
                 </li>
               </div>
