--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -13,9 +13,12 @@
   <title>{{ title }}</title>
 
   <link href="/img/favicon.png" rel="icon" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+  <script src="/js/illust-preview.js" defer></script>
+  <link href="/css/bootstrap-style.css" rel="stylesheet" />
 
   <!-- TODO: get htmx working properly again; currently causes comment pagination to be persisted across page navigations -->
   <!-- <meta name="htmx-config" content='{"includeIndicatorStyles":false}'>
