--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -12,7 +12,7 @@
       <div class="d-flex justify-content-between align-items-center">
         <a class="text-decoration-none text-light d-flex align-items-center" href="/users/{{ .Illust.User.ID }}">
           <img src="{{ .Illust.User.Avatar }}" alt="{{ .Illust.User.Name }}" class="rounded-circle object-fit-cover me-2" style="width: 40px; height: 40px;">
-          <h2 class="h6 m-0">Other works by {{ .Illust.User.Name }}</h2>
+          <h2 class="h5 m-0">Other works by {{ .Illust.User.Name }}</h2>
         </a>
         {{- combinedUrl := "/artworks-multi/" + joinArtworkIds(.Illust.RecentWorks) }}
         <a href="{{combinedUrl}}" class="btn btn-sm btn-outline-primary">View all</a>
@@ -23,7 +23,8 @@
         <div class="row flex-nowrap">
           {{- range .Illust.RecentWorks }}
           <!-- Display artist's other artworks at smaller width on larger devices -->
-          <div class="col-6 col-md-3 px-2">
+          <!-- Should always be a bit larger than the thumbnails for the related works -->
+          <div class="col-6 col-md-4 col-lg-3 px-2">
             {{- include "fragments/thumbnail-dt" . }}
           </div>
           {{- end }}
