--- a/assets/views/tag.jet.html
+++ b/assets/views/tag.jet.html
@@ -2,20 +2,22 @@
 {{- import "blocks/switcher" }}
 {{- block body() }}
 
-<div class="container">
+<div class="row justify-content-center mb-5">
+<div class="col-sm-12 col-md-9">
   <!-- Tag header -->
-  <div class="card">
+  <div class="card mb-4">
     <div class="card-body">
       <div class="row">
         {{- if .Tag.Metadata.ID }}
-        <div class="col-md-3">
+        <!-- Tag artwork -->
+        <div class="col-md-4 mb-3">
           <a href="/artworks/{{ .Tag.Metadata.ID }}">
             <img src="{{ .Tag.Metadata.Image }}" alt="{{ .Tag.Name }}" class="img-fluid object-fit-cover rounded" />
           </a>
         </div>
         {{- end }}
-        <!-- mt-3 for the text to add space when it wraps around on small screens -->
-        <div class="col-md-9 mt-3">
+        <!-- Tag information -->
+        <div class="col-md-8">
           <h1 class="display-5">#{{ .Tag.Name }}</h1>
           <h2 class="h4 text-muted">{{ .Tag.Metadata.Name }}</h2>
           <p class="lead"><strong>{{ .Data.Artworks.Total }}</strong> works</p>
@@ -27,7 +29,7 @@
   </div>
 
   <!-- Related tags -->
-  <div class="mt-4">
+  <div class="mb-4">
     <h3>Related Tags</h3>
     <div class="d-flex flex-wrap">
       {{- range .Data.RelatedTags }}
@@ -43,7 +45,7 @@
   {{- Ratio := isset(.Queries.ratio) ? .Queries.ratio : "" }}
   {{- SearchMode := isset(.Queries.smode) ? .Queries.smode : "" }}
 
-  <div class="row mt-4">
+  <div class="row mb-4">
     <div class="col-md-4 mb-3">
       <h4>Category</h4>
       {{- URL := unfinishedQuery(.QueriesC, "category") }}
@@ -67,7 +69,7 @@
     </div>
   </div>
 
-  <div class="row mt-2">
+  <div class="row mb-4">
     <div class="col-md-6 mb-3">
       <h4>Ratio</h4>
       {{- URL := unfinishedQuery(.QueriesC, "ratio") }}
@@ -85,7 +87,7 @@
   </div>
 
   <!-- Advanced Settings -->
-  <div class="accordion mb-4" id="advancedSettings">
+  <div class="accordion mb-5" id="advancedSettings">
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingAdvanced">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseAdvanced" aria-expanded="false" aria-controls="collapseAdvanced">
@@ -132,15 +134,17 @@
       </div>
     </div>
   </div>
+</div>
 
+<div class="col-12">
   <!-- Popular Artworks -->
   {{- if .Data.Popular.Recent }}
-  <h2 class="mb-3">Popular artworks</h2>
-  <h3 class="h5 mb-3">Recent</h3>
+  <h2 class="h3 fw-bold mb-3">Popular artworks</h2>
+  <h3 class="h4 fw-bold mb-3">Recent</h3>
   <div class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-4 mb-4">
     {{- include "fragments/small-tn" .Data.Popular.Recent }}
   </div>
-  <h3 class="h5 mb-3">All Time</h3>
+  <h2 class="h4 fw-bold mb-3">All Time</h2>
   <div class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-4 mb-4">
     {{- include "fragments/small-tn" .Data.Popular.Permanent }}
   </div>
